# Automation-task

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
entrypoint-tests/: main.py  pyproject.toml
pages/: hollder_driver.py  leetcode_page.py  login_page.py  welcome_page.py
test_entry_point/: pyproject.toml
test_pages/: README.md  conftest.py  test_leetcode_page.py  test_login_page.py  test_welcome_page.py
