[project]
name = "test-entry-point"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.3",
    "pytest-html>=4.2.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
